Added 404 and 500 pages

--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
+<meta content="IE=edge" http-equiv="X-UA-Compatible">
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+<meta content="NONE,NOARCHIVE" name="robots">
+<meta name="csrf-param" content="authenticity_token">
+<meta name="csrf-token" content="7CZFCDlIOrVe/vFDj8hml6BwwkbdI9ifYiGbxlikx9jo1cH10ovX3sJGuqSoLFq/D8bLsTa4hRLtAdlqNEObmQ==">
+<link rel="stylesheet" media="all" href="/assets/rails_admin/rails_admin-aa8fcab07991cfc251160f921e9001fd.css?body=1">
+<script src="/assets/jquery-2ebc4d7dee7ed5002a2ec81cda5c42ea.js?body=1"></script>
+<script src="/assets/rails_admin/bootstrap/bootstrap-transition-349e2c80e43210f20936b0c48cb0322f.js?body=1"></script>
+<script src="/assets/rails_admin/bootstrap/bootstrap-affix-c995ace4374a80f8ff1921e39dc3700f.js?body=1"></script>
+<script src="/assets/rails_admin/bootstrap/bootstrap-alert-ab037d6da97a64d75b0a482076e062f2.js?body=1"></script>
+  
 </head>
 
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+<style>
+  
+  .row {
+    text-align: center;
+    margin-top: 100px;
+  }
+
+</style>
+
+<body class="rails_admin">
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand pjax" href="/">
+            Demo App
+          <small>Admin</small>
+        </a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right root_links">
+          <li class="dashboard_root_link"><a class="pjax" href="/">Dashboard</a></li>
+        </ul>
+      </div>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
+  </nav>
+  <!-- This file lives in public/404.html -->
+  
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-sm-8 col-md-8 well">
+          <h1>That's a 500!</h1>
+          <h2>We're sorry, but something went wrong</h2>
+          <h5>If you think you've found a bug, please report it <a href="https://github.com/Team-CodeBenders/RailsAdmin_DemoApp/issues/new" target="_new">here.</a></h5>
+         <a href="./" class="btn btn-primary">Back To Home</a>
+        </div>
+        <div class="col-md-2">
+        </div>
+      </div>
+    </div>
+
 </body>
 </html>
